Release 1.3.77: fix two-column-text editor list + alignment

--- a/blocks/two-column-text/src/editor.scss
+++ b/blocks/two-column-text/src/editor.scss
@@ -78,9 +78,9 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0;
-	max-width: 645px;
 	width: 100%;
-	margin: 0 auto;
+	max-width: 100%;
+	margin: 0;
 	align-items: stretch;
 }
 
@@ -89,13 +89,11 @@
 }
 
 .wp-block-global360blocks-two-column-text .two-column-text__column--left .two-column-text__column-inner {
-	margin-right: 0;
-	margin-left: auto;
+	margin: 0;
 }
 
 .wp-block-global360blocks-two-column-text .two-column-text__column--right .two-column-text__column-inner {
-	margin-left: 0;
-	margin-right: auto;
+	margin: 0;
 }
 
 .wp-block-global360blocks-two-column-text .two-column-text__column-inner h2 {
@@ -128,6 +126,37 @@
 
 .wp-block-global360blocks-two-column-text .two-column-text__column-inner li p {
 	margin: 0;
+}
+
+.wp-block-global360blocks-two-column-text .block-editor-block-list__block > .wp-block {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.editor-styles-wrapper
+	.wp-block-global360blocks-two-column-text
+	:where(:not(.is-layout-flex, .is-layout-grid))
+	>
+	.wp-block {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	max-width: 100% !important;
+	text-align: left !important;
+	width: 100% !important;
+}
+
+.wp-block-global360blocks-two-column-text
+	.block-editor-inner-blocks
+	> .block-editor-block-list__layout
+	> .block-editor-block-list__block
+	> .wp-block {
+	align-self: stretch;
+	float: none;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	max-width: 100% !important;
+	text-align: left !important;
+	width: 100% !important;
 }
 
 @media (max-width: 1024px) {
